-. update : minting guide

--- a/guide/mintingguide.html
+++ b/guide/mintingguide.html
@@ -103,9 +103,27 @@
           <br>
           <h3>권장 브라우저: Chrome / Brave / Microsoft Edge</h3>
           <p>혜원 전신첩 NFT 민팅 화면은 권장 브라우저에 최적화 되어있습니다.</p>
+        </div>
+        <div>
+          <h3>Hardware Wallet Ledger 사용시 민팅이 되지 않을 경우 해결 방법</h3>
+          <p>Metamask 등에서 Ledger를 연결하여 민팅하고자 할 때 계속해서 "실패"가 발생할 경우 아래와 같이 Ledger를 설정하세요.
+          <ul>
+            <li>Ledger 기기의 Ehereum app의 Setting에서 Blind Signing Enabled 로 설정하세요.</li>
+            <div>
+              <img src="./img/Ledger_blind_signing.jpg"></img>
+
+            </div>
+            <li>Ledger 기기의 Ehereum app의 Setting에서 Debug Data Displayed 로 설정하세요.</li>
+            <div>
+              <img src="./img/Ledger_debug.jpg"></img>
+
+            </div>
+          </ul> 
+          </p>
           <br>
         </div>
         <div>
+          <h3>혜원 전신첩 NFT 민팅하기</h3>
           <ul>
             <li>Step 1 : 우측 상단 Connect Wallet 버튼을 눌러 지갑을 연결해주세요.</li>
             <p>
