--- a/imglistpage.html
+++ b/imglistpage.html
@@ -7,20 +7,20 @@
 
     <!-- Meta Tag -->
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Kangsong Metaverse Museum - connecting the past and future" />
+    <meta name="title" content="Kansong Metaverse Museum - connecting the past and future" />
     <meta
       name="description"
       content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
     />
     <meta
       name="keywords"
-      content="Kansong NFT, Kangsong Token, Kansong Metaverse, Kansong backers, Kansong DAO, Kansong Museum, Kansong project, atomrigs Kansong, Korean cultural NFT, Sin Yun-bok NFT"
+      content="Kansong NFT, Kansong Token, Kansong Metaverse, Kansong backers, Kansong DAO, Kansong Museum, Kansong project, atomrigs Kansong, Korean cultural NFT, Sin Yun-bok NFT, Hyewon Album of Genre Paintings endorsed by Kansong"
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://kansong.io/" />
-    <meta property="og:title" content="Kangsong Metaverse Museum - connecting the past and future" />
+    <meta property="og:title" content="Kansong Metaverse Museum - connecting the past and future" />
     <meta
       property="og:description"
       content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
@@ -30,7 +30,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="http://kansong.io/" />
-    <meta property="twitter:title" content="Kangsong Metaverse Museum - connecting the past and future" />
+    <meta property="twitter:title" content="Kansong Metaverse Museum - connecting the past and future" />
     <meta
       property="twitter:description"
       content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
@@ -38,7 +38,7 @@
     <meta property="twitter:image" content="http://kansong.io/img/nft-full.jpg" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Kangsong Metaverse Museum - connecting the past and future" />
+    <meta name="twitter:title" content="Kansong Metaverse Museum - connecting the past and future" />
     <meta
       name="twitter:description"
       content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
