--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kangsong Metaverse Museum - connecting the past and future</title>
+    <title>Kansong Metaverse Museum - connecting the past and future</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- Meta Tag -->
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Kangsong Metaverse Museum - connecting the past and future" />
+    <meta name="title" content="Kansong Metaverse Museum - connecting the past and future" />
     <meta
       name="description"
       content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
     />
     <meta
       name="keywords"
-      content="Kansong NFT, Kangsong Token, Kansong Metaverse, Kansong backers, Kansong DAO, Kansong Museum, Kansong project, atomrigs Kansong, Korean cultural NFT, Sin Yun-bok NFT"
+      content="Kansong NFT, Kansong Token, Kansong Metaverse, Kansong backers, Kansong DAO, Kansong Museum, Kansong project, atomrigs Kansong, Korean cultural NFT, Sin Yun-bok NFT, Hyewon Album of Genre Paintings endorsed by Kansong"
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://kansong.io/" />
-    <meta property="og:title" content="Kangsong Metaverse Museum - connecting the past and future" />
+    <meta property="og:title" content="Kansong Metaverse Museum - connecting the past and future" />
     <meta
       property="og:description"
       content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
@@ -31,7 +31,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="http://kansong.io/" />
-    <meta property="twitter:title" content="Kangsong Metaverse Museum - connecting the past and future" />
+    <meta property="twitter:title" content="Kansong Metaverse Museum - connecting the past and future" />
     <meta
       property="twitter:description"
       content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
@@ -39,7 +39,7 @@
     <meta property="twitter:image" content="http://kansong.io/img/nft-full.jpg" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Kangsong Metaverse Museum - connecting the past and future" />
+    <meta name="twitter:title" content="Kansong Metaverse Museum - connecting the past and future" />
     <meta
       name="twitter:description"
       content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
@@ -150,7 +150,7 @@
       <div>
         <a href="mintingInfo.html" target="_self"><img src="./img/popup.jpg" alt=""></a>
       </div>
-      <div class="popup_close"><a href="">&#215;</a></div>
+      <div class="popup_close"><div>&#215;</div></div>
       <!-- <div class="close"><button type="toggle" name="close_btn"></button>&#215;</div> -->
     </div>
 
