-. July -민팅팝업 height 수정 -민팅팝업 close버튼 수정 / mint버튼 확대 -모바일 소셜 버튼 노란색으로 수정 -이더스캔 svg 파일 추가

--- a/mintingInfo.html
+++ b/mintingInfo.html
@@ -201,7 +201,7 @@
               (4) 각종 간송 메타버스 뮤지엄 온오프라인 파티 우선 초대<br />
               (5) 공연, 제작 발표회 등 각종 생태계 이벤트 우선 초대
             </p>
-  
+
           </div>
         </div>
       </div>
@@ -372,6 +372,11 @@
           </li>
         </ul>
       </div>
+    </div>
+  </section>
+
+  <section class="section7">
+    <div class="Container">
     </div>
   </section>
 
