-. pre-sale mint popup hide

--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
         <li><a href="#Partner">Partner</a></li>
       </ol>
     </nav>
-<!-- 
-    <div id="popup">
+
+    <div id="popup" style="display:none;">
       <div>
         <a href="mintingInfo.html" target="_self"><img src="./img/popup.jpg" alt=""></a>
       </div>
       <div class="popup_close"><div>&#215;</div></div>
       <!-- <div class="close"><button type="toggle" name="close_btn"></button>&#215;</div> -->
-    </div> -->
+    </div>
 
     <section id="Home" class="section1">
       <div class="Container">
