- update commingsoon banner + soldout

--- a/mintingInfo.html
+++ b/mintingInfo.html
@@ -126,10 +126,25 @@
       </div>
   </section>
 
+  <section id="mintpage_banner" class="section8">
+    <div class="Container">
+      <div class="grid">
+        <div>
+          <img src="./img/image.png" alt="">
+          <div class="banner_bg"></div>
+        </div>
+        <div class="textarea">
+          <p>혜원 전신첩 NFT Round 1</p>
+          <p>Coming soon</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section id="NFTinfo" class="section6">
     <div class="Container">
       <div class="textarea grid">
+        <div class="soldout_img"><img src="./img/soldout_3.png" alt=""></div>
         <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">
           혜원 전신첩 NFT 프리세일
         </h2>
@@ -267,8 +282,6 @@
       </div>
     </div>
   </section>
-
-
 
   <section id="NFTvariation" class="section2">
     <div class="Container">
