- Update : banner - round 1 -> Public Sale

--- a/mintingInfo.html
+++ b/mintingInfo.html
@@ -134,7 +134,7 @@
           <div class="banner_bg"></div>
         </div>
         <div class="textarea">
-          <p>혜원 전신첩 NFT Round 1</p>
+          <p>혜원 전신첩 NFT Public Sale</p>
           <p>Coming soon</p>
         </div>
       </div>
