--- a/index.html
+++ b/index.html
@@ -619,6 +619,12 @@
       </div>
     </section>
 
+    <section>
+      <div class="nft_termsofsale">
+        <a href="NFT_terms_of_sale_6.3.pdf" target="_blank">NFT 판매 약관</a>
+      </div>
+    </section>
+
     <script type="text/javascript" src="./js/base.js"></script>
     <script type="text/javascript" src="./js/index.js"></script>
     <script src="./js/jquery.malihu.PageScroll2id.js"></script>
