--- a/mintingInfo.html
+++ b/mintingInfo.html
@@ -399,6 +399,12 @@
 
   <div id="popup-minting"></div>
 
+  <section>
+    <div class="nft_termsofsale">
+      <a href="NFT_terms_of_sale_6.3.pdf" target="_blank">NFT 판매 약관</a>
+    </div>
+  </section>
+
 
   <script type="text/javascript">
     $(document).ready(function(){
