--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <meta
       name="keywords"
-      content="Kansong NFT, Kansong Token, Kansong Metaverse, Kansong backers, Kansong DAO, Kansong Museum, Kansong project, atomrigs Kansong, Korean cultural NFT, Sin Yun-bok NFT, Hyewon Album of Genre Paintings endorsed by Kansong"
+      content="Kansong NFT, Kansong Token, Kansong Metaverse, Kansong backers, Kansong DAO, Kansong Museum, Kansong project, atomrigs Kansong, Korean cultural NFT, Sin Yun-bok NFT, Hyewon Album of Genre Paintings endorsed by Kansong, 간송 메타버스 뮤지엄, 간송 미술관"
     />
 
     <!-- Open Graph / Facebook -->
