--- a/mintingInfo.html
+++ b/mintingInfo.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html >
 <head>
-  <title>Kansong Metaverse Museum - connecting the past and future</title>
+  <title>간송 메타버스 뮤지엄 - 민팅 페이지</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- Meta Tag -->
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Kansong Metaverse Museum - connecting the past and future" />
+    <meta name="title" content="간송 메타버스 뮤지엄 - 민팅 페이지" />
     <meta
       name="description"
-      content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
+      content="간송 메타버스 뮤지엄은 간송 미술관에서 보유하고 있는 국보와 블록체인 다오를 통한 커뮤니티로 한국 문화재의 세계화를 이끄는 목표를 가지고 있습니다."
     />
     <meta
       name="keywords"
-      content="Kansong NFT, Kansong Token, Kansong Metaverse, Kansong backers, Kansong DAO, Kansong Museum, Kansong project, atomrigs Kansong, Korean cultural NFT, Sin Yun-bok NFT, Hyewon Album of Genre Paintings endorsed by Kansong"
+      content="간송 메타버스 뮤지엄, 간송 미술관, 간송 NFT, 간송 토큰, 간송 메타버스, 간송 다오, 간송 프로젝트, 한국 문화재 NFT, 혜원 NFT"
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://kansong.io/" />
-    <meta property="og:title" content="Kansong Metaverse Museum - connecting the past and future" />
+    <meta property="og:title" content="간송 메타버스 뮤지엄 - 민팅 페이지" />
     <meta
       property="og:description"
-      content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
+      content="간송 메타버스 뮤지엄은 간송 미술관에서 보유하고 있는 국보와 블록체인 다오를 통한 커뮤니티로 한국 문화재의 세계화를 이끄는 목표를 가지고 있습니다."
     />
     <meta property="og:image" content="http://kansong.io/img/nft-full.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="http://kansong.io/" />
-    <meta property="twitter:title" content="Kansong Metaverse Museum - connecting the past and future" />
+    <meta property="twitter:title" content="간송 메타버스 뮤지엄 - 민팅 페이지" />
     <meta
       property="twitter:description"
-      content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
+      content="간송 메타버스 뮤지엄은 간송 미술관에서 보유하고 있는 국보와 블록체인 다오를 통한 커뮤니티로 한국 문화재의 세계화를 이끄는 목표를 가지고 있습니다."
     />
     <meta property="twitter:image" content="http://kansong.io/img/nft-full.jpg" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Kansong Metaverse Museum - connecting the past and future" />
+    <meta name="twitter:title" content="간송 메타버스 뮤지엄 - 민팅 페이지" />
     <meta
       name="twitter:description"
-      content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
+      content="간송 메타버스 뮤지엄은 간송 미술관에서 보유하고 있는 국보와 블록체인 다오를 통한 커뮤니티로 한국 문화재의 세계화를 이끄는 목표를 가지고 있습니다."
     />
     <meta name="twitter:image" content="http://kansong.io/img/nft-full.jpg" />
     <meta name="twitter:site" content="http://kansong.io/" />
