Update - img : local path

--- a/mintingInfo.html
+++ b/mintingInfo.html
@@ -359,7 +359,7 @@
         <ul class="">
           <li>
             <a href="">
-              <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/nft-full.jpg" alt="" />
+              <img src="download\nft-full.jpg" alt="" />
               <p>#1234</p>
             </a>
           </li>
@@ -371,7 +371,7 @@
           </li>
           <li>
             <a href="">
-              <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/nft-full.jpg" alt="" />
+              <img src="download\nft-full.jpg" alt="" />
               <p>#1234</p>
             </a>
           </li>
