Update - add ydw, zibezi logo

--- a/index.html
+++ b/index.html
@@ -613,6 +613,16 @@
                   <img src="./img/partner/logo_holograms.png" alt="" />
                 </div>
               </li>
+              <li id="Partner-zibezi" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+                <div class="Partner-logo">
+                  <img src="./img/partner/zibezi.png" alt="" />
+                </div>
+              </li>
+              <li id="Partner-ydw" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+                <div class="Partner-logo">
+                  <img src="./img/partner/ydw.png" alt="" />
+                </div>
+              </li>
             </ul>
           </div>
         </div>
