Update - Homage to Hyewon

--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
 
       <div class="header-right-btn">
 
+        <!--<button type="button" name="button">EN</button>-->
+
         <div id="btn-mintingInfo">
           <a href="mintingInfo.html" target="_self">
             NFT Mint
@@ -439,6 +441,10 @@
           <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">Digital Expansion Plan</h2>
         </div>
 
+        <div class="textarea">
+          <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">Metaverse Evolution</h3>
+        </div>
+
         <div class="imgarea grid">
           <div id="thesandbox">
             <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
@@ -467,6 +473,25 @@
             </div>
           </div>
         </div>
+      
+        <div class="Container">
+          <div class="textarea">
+            <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">Homage to Hyewon</h3>
+          </div>
+
+          <div class="imgarea grid">
+            <div class="Expansion-img">
+              <div class="partner_hth" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
+                <img src="img\partner\zbz650.jpg" alt="" />
+              </div>
+              <div class="partner_hth" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
+                <img src="img\partner\ydw650.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+      </div>
+
+
       </div>
     </section>
 
