Update - index_ko

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
           </a>
         </div> -->
 
+        <!--<button type="button" name="button">EN</button>-->
+
         <div id="btn-mintingInfo">
           <a id="connectButton" onclick="bundle.connect()" target="_self">
             Connect Wallet
