--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </header>
 
     <div id="walletModal" class="modal" style="display:none;">
-      <div class="modal_content" 
+      <div class="modal_content"
            title="주소입력 모달창">
            <input type="text" id="postcode" placeholder="우편번호">
            <input type="button" onclick="execDaumPostcode()" value="우편번호 찾기"><br>
@@ -463,10 +463,12 @@
 
         <div class="imgarea grid">
           <div id="thesandbox">
+            <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">Metaverse Evolution</h3>
+
             <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
               <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/expansion-banner-thesandbox_new.jpg" alt="" />
             </p>
-            <div class="Expansion-img">
+            <div class="Expansion-img thesandbox-img">
               <div class="Expansion-img-1 thesandbox-img-1" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
                 <div>
                   <video autoplay loop muted>
@@ -488,6 +490,20 @@
               </div>
             </div>
           </div>
+
+          <div id="Homage">
+            <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">Homage to Hyewon</h3>
+
+            <div class="Expansion-img">
+              <div class="partner_hth Expansion-img-1" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
+                <img src="img\partner\zbz650.jpg" alt="" />
+              </div>
+              <div class="partner_hth Expansion-img-2" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
+                <img src="img\partner\ydw650.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
@@ -666,6 +682,6 @@
     <script src="https://www.cssscript.com/demo/simple-typewriter-effect-pure-javascript-typewriterjs/typewriter.js"></script>
     <script src="./dist/bundle.js" type="text/javascript"></script>
     <script src="./js/firebase.js" type="module" type="text/javascript"></script>
-  
+
   </body>
 </html>
