Update - en_ko button

--- a/index_ko.html
+++ b/index_ko.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kansong Metaverse Museum - connecting the past and future</title>
+    <title>간송 메타버스 뮤지엄 - 과거와 미래를 연결짓다</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- Meta Tag -->
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Kansong Metaverse Museum - connecting the past and future" />
+    <meta name="title" content="간송 메타버스 뮤지엄 - 과거와 미래를 연결짓다" />
     <meta
       name="description"
-      content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
+      content="간송 메타버스 뮤지엄은 블록체인 기술과 메타버스를 통해 전 세계 어디에서든 누구나 한국 문화재를 보고 즐길 수 있도록 하는 것을 목표로 합니다."
     />
     <meta
       name="keywords"
-      content="Kansong NFT, Kansong Token, Kansong Metaverse, Kansong backers, Kansong DAO, Kansong Museum, Kansong project, atomrigs Kansong, Korean cultural NFT, Sin Yun-bok NFT, Hyewon Album of Genre Paintings endorsed by Kansong, 간송 메타버스 뮤지엄, 간송 미술관"
+      content="간송 NFT, 간송 토큰, 간송 메타버스, 간송 후원자, 간송 DAO, 간송 박물관, 간송 프로젝트, 아톰릭스랩 간송, 한국문화 NFT, 신윤복 NFT, 간송이 유한한 혜원 전신첩 앨범"
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://kansong.io/" />
-    <meta property="og:title" content="Kansong Metaverse Museum - connecting the past and future" />
+    <meta property="og:title" content="간송 메타버스 뮤지엄 - 과거와 미래를 연결짓다" />
     <meta
       property="og:description"
-      content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
+      content="간송 메타버스 뮤지엄은 블록체인 기술과 메타버스를 통해 전 세계 어디에서든 누구나 한국 문화재를 보고 즐길 수 있도록 하는 것을 목표로 합니다."
     />
     <meta property="og:image" content="http://kansong.io/img/nft-full.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="http://kansong.io/" />
-    <meta property="twitter:title" content="Kansong Metaverse Museum - connecting the past and future" />
+    <meta property="twitter:title" content="간송 메타버스 뮤지엄 - 과거와 미래를 연결짓다" />
     <meta
       property="twitter:description"
-      content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
+      content="간송 메타버스 뮤지엄은 블록체인 기술과 메타버스를 통해 전 세계 어디에서든 누구나 한국 문화재를 보고 즐길 수 있도록 하는 것을 목표로 합니다."
     />
     <meta property="twitter:image" content="http://kansong.io/img/nft-full.jpg" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Kansong Metaverse Museum - connecting the past and future" />
+    <meta name="twitter:title" content="간송 메타버스 뮤지엄 - 과거와 미래를 연결짓다" />
     <meta
       name="twitter:description"
-      content="Kansong Metaverse Museum aims to globalize Korean cultural assets with the hands of Korean citizens and global communities through blockchain DAO and Metaverse."
+      content="간송 메타버스 뮤지엄은 블록체인 기술과 메타버스를 통해 전 세계 어디에서든 누구나 한국 문화재를 보고 즐길 수 있도록 하는 것을 목표로 합니다."
     />
     <meta name="twitter:image" content="http://kansong.io/img/nft-full.jpg" />
     <meta name="twitter:site" content="http://kansong.io/" />
@@ -91,8 +91,8 @@
       <div class="header-right-btn">
 
         <div class="lang">
-          <button onclick='changeLanguage("ko")' id="lang">KO</button>
-        </div>
+            <button onclick='changeLanguage("en")' id="lang">EN</button>
+          </div>
 
         <div id="btn-mintingInfo">
           <a href="mintingInfo.html" target="_self">
@@ -141,14 +141,14 @@
     <nav class="snb hide" id="navbarCollapse">
       <ol>
         <li><a href="#Home">Home</a></li>
-        <li><a href="#Introduction">Introduction</a></li>
-        <li><a href="#MainCharacters">Main Characters</a></li>
-        <li><a href="#DigitalRebirthEvents">Digital Rebirth Events</a></li>
+        <li><a href="#Introduction">소개</a></li>
+        <li><a href="#MainCharacters">등장 인물들</a></li>
+        <li><a href="#DigitalRebirthEvents">디지털 환생 이벤트</a></li>
         <li><a href="#NFTs">NFTs</a></li>
-        <li><a href="#DigitalExpansionPlan">Digital Expansion Plan</a></li>
+        <li><a href="#DigitalExpansionPlan">디지털 확장 계획</a></li>
         <!-- <li><a href="#Roadmap">Roadmap</a></li> -->
-        <li><a href="#Team">Team</a></li>
-        <li><a href="#Partner">Partner</a></li>
+        <li><a href="#Team">프로젝트팀</a></li>
+        <li><a href="#Partner">파트너</a></li>
       </ol>
     </nav>
 
@@ -181,13 +181,13 @@
       <div class="Container">
         <div class="textarea grid">
           <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">
-            Hyewon Sin, Yunbok, <br />Album of Genre Paintings by Hyewon
+            혜원 신윤복, <br />혜원전신첩
 
             <p data-scroll="toggle(.fromRightIn, .fromRightOut)" class="delay-3 inline">(혜원 신윤복, 혜원전신첩)</p>
           </h2>
 
           <div class="margin-b-4">
-            <p data-scroll="toggle(.fromTopIn, .fromTopOut)" class="subtitle">Korean National Treasure No. 135</p>
+            <p data-scroll="toggle(.fromTopIn, .fromTopOut)" class="subtitle">국보 제 135호</p>
             <!-- <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="subtitle delay-3 inline margin-r-6">
               Album of Genre Paintings by Hyewon
             </p> -->
@@ -195,13 +195,12 @@
 
           <div>
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
-              Better known by his pen name Hyewon, Sin Yunbok was the elder son of famous court painter Sin Hanpyeong. Excelling at illustrating human figures, he boldly depicted alluring woman in
-              defiance of taboos despite his position as a reputable court painter.
+                신윤복은 본명보다 혜원으로 더 잘 알려져있으며, 궁중화가 신한평의 장남입니다. 특히 신윤복은 인간의 모습을 잘 묘사했으며, 심지어 명성을 중시하는 궁중 화가들에게 금기시된 매혹적인 여성의 그림을 대담하게 그리기까지 했습니다. 
             </p>
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-5">
-              This collection is unequivocally the finest of Sin’s known works, comprising 30 genre paintings of people in 18th century Hanyang (present day Seoul).
+                이 전신첩은 최고로 많이 알려진 신윤복의 작품 중 하나입니다. 이 전신첩에는 18세기 한양(현재 서울) 사람들의 풍속화 30점이 수록되어 있습니다.
             </p>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-8">Each painting portrays their complex emotion and physical beauty across various situations in meticulous detail.</p>
+            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-8">다양한 상황에 처한 사람들을 아주 자세하게 묘사하고 있으며, 각각의 그림은 그들의 복잡한 감정 뿐만 아니라 육체적 아름다움도 강조합니다.</p>
           </div>
 
           <!-- <div class="line"></div> -->
@@ -341,8 +340,8 @@
     <section id="DigitalRebirthEvents" class="section4">
       <div class="Container">
         <div class="textarea grid">
-          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">Digital Rebirth Events</h2>
-          <p data-scroll="toggle(.fromTopIn, .fromTopOut)" class="subtitle delay-3">6~26 April 2022</p>
+          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">디지털 환생 이벤트</h2>
+          <p data-scroll="toggle(.fromTopIn, .fromTopOut)" class="subtitle delay-3">2022년 4월 6일 ~ 26일</p>
         </div>
 
         <div class="imgarea grid">
@@ -358,7 +357,7 @@
     <section id="NFTs" class="section5">
       <div class="Container">
         <div class="textarea">
-          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">Six Types of NFTs</h2>
+          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">NFT의 6가지 유형</h2>
         </div>
 
         <div class="imgarea grid">
@@ -368,10 +367,10 @@
                 <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/nft-full.jpg" alt="" />
               </div>
               <div>
-                <p class="NFTs-typeNum">Type 1</p>
-                <p class="NFTs-typeName subtitle">Full Painting</p>
+                <p class="NFTs-typeNum">타입 1</p>
+                <p class="NFTs-typeName subtitle">전체 그림</p>
                 <p class="NFTs-quantity">30 NFTs</p>
-                <p class="NFTs-quantityPer">Quantity: only one per NFT</p>
+                <p class="NFTs-quantityPer">수량: NFT당 1개</p>
               </div>
             </li>
 
@@ -380,10 +379,10 @@
                 <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/nft-fullbody.jpg" alt="" />
               </div>
               <div>
-                <p class="NFTs-typeNum">Type 2</p>
-                <p class="NFTs-typeName subtitle">Body Shot</p>
+                <p class="NFTs-typeNum">타입 2</p>
+                <p class="NFTs-typeName subtitle">바디 샷</p>
                 <p class="NFTs-quantity">80~100 NFTs</p>
-                <p class="NFTs-quantityPer">Quantity: 10 per NFT</p>
+                <p class="NFTs-quantityPer">수량: NFT당 10개</p>
               </div>
             </li>
 
@@ -392,10 +391,10 @@
                 <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/nft-bust.jpg" alt="" />
               </div>
               <div>
-                <p class="NFTs-typeNum">Type 3</p>
-                <p class="NFTs-typeName subtitle">Bust Shot</p>
+                <p class="NFTs-typeNum">타입 3</p>
+                <p class="NFTs-typeName subtitle">버스트 샷</p>
                 <p class="NFTs-quantity">80~100 NFTs</p>
-                <p class="NFTs-quantityPer">Quantity: 10 per NFT</p>
+                <p class="NFTs-quantityPer">수량: NFT당 10개</p>
               </div>
             </li>
 
@@ -404,10 +403,10 @@
                 <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/nft-head.jpg" alt="" />
               </div>
               <div>
-                <p class="NFTs-typeNum">Type 4</p>
-                <p class="NFTs-typeName subtitle">Head Shot</p>
+                <p class="NFTs-typeNum">타입 4</p>
+                <p class="NFTs-typeName subtitle">헤드 샷</p>
                 <p class="NFTs-quantity">80~100 NFTs</p>
-                <p class="NFTs-quantityPer">Quantity: 10 per NFT</p>
+                <p class="NFTs-quantityPer">수량: NFT당 10개</p>
               </div>
             </li>
 
@@ -416,10 +415,10 @@
                 <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/nft-face.jpg" alt="" />
               </div>
               <div>
-                <p class="NFTs-typeNum">Type 5</p>
-                <p class="NFTs-typeName subtitle">Face Shot</p>
+                <p class="NFTs-typeNum">타입 5</p>
+                <p class="NFTs-typeName subtitle">얼굴 샷</p>
                 <p class="NFTs-quantity">80~100 NFTs</p>
-                <p class="NFTs-quantityPer">Quantity: 10 per NFT</p>
+                <p class="NFTs-quantityPer">수량: NFT당 10개</p>
               </div>
             </li>
 
@@ -428,10 +427,10 @@
                 <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/nft-obj.jpg" alt="" />
               </div>
               <div>
-                <p class="NFTs-typeNum">Type 6</p>
-                <p class="NFTs-typeName subtitle">Object Shot</p>
+                <p class="NFTs-typeNum">타입 6</p>
+                <p class="NFTs-typeName subtitle">오브젝트 샷</p>
                 <p class="NFTs-quantity">80~100 NFTs</p>
-                <p class="NFTs-quantityPer">Quantity: 10 per NFT</p>
+                <p class="NFTs-quantityPer">수량: NFT당 10개</p>
               </div>
             </li>
           </ul>
@@ -442,7 +441,7 @@
     <section id="DigitalExpansionPlan" class="section6">
       <div class="Container">
         <div class="textarea">
-          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">Digital Expansion Plan</h2>
+          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">디지털 확장 계획</h2>
         </div>
 
         <div class="imgarea grid">
@@ -510,24 +509,22 @@
       <div class="Container">
         <div class="grid">
           <div class="textarea">
-            <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">Team</h2>
+            <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">프로젝트팀</h2>
 
-            <p data-scroll="toggle(.fromTopIn, .fromTopOut)" class="subtitle">About Kansong Art Museum</p>
+            <p data-scroll="toggle(.fromTopIn, .fromTopOut)" class="subtitle">간송미술관 소개</p>
 
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
-              Opening in 1938 as the first modern private museum in Korea, Kansong Art Museum (KAM) is of unparalleled repute to count among the top three Korean institutions of its kind.
+                간송미술관은 1938년 한국 최초의 근대식 사립미술관으로 개관한 이래 국내 3대 미술관으로 손꼽히는 독보적인 명성을 자랑합니다.
             </p>
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
-              The Kansong Collection comprises Korean antique art across the spectrum of stone works, metal works, ceramics, paintings, and antique books from the 6th to early 20th century.
-              Established during the Japanese colonial era, KAM is also known for its founding principle “Munwhaboguk” – preserving the national spirit through culture.
+                간송 컬렉션은 석조 작품, 금속 작품, 도예, 회화, 고서 6세기부터 20세기 초반에 걸친 한국의 고미술품으로 구성되어 있습니다.
+                일제강점기에 설립된 간송미술관은 문화를 통해 민족의 정신을 보전한다는 '문화보국'의 창립 이념으로도 유명합니다.
             </p>
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
-              KAM’s founder Kansong Chun Hyung-pil was one of the most famous art collectors in Korean history, regarded as the guardian of Korean cultural heritage for his pioneering work under and
-              against Japan’s colonial rule.
+                간송미술관의 창시자인 간송 천형필은 일제강점기 및 일제강점기에 대한 선구적인 작업으로 한국 문화유산의 수호자로 여겨지는 한국 역사상 가장 유명한 미술 ​​수집가 중 한 명입니다.
             </p>
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-5">
-              KAM’s signature collections include: Hunmin-jeongeum, the original textbook of Korean alphabets (UNESCO’s memory of the world, Korean National Treasure no. 70); Celadon Prunus Vase with
-              inlaid cloud and crane design (Korean National Treasure no. 68), and Album of Genre Paintings by Hyewon (Korean National Treasure no. 135).
+                간송미술관의 대표적인 소장품으로는 국보 12점, 보물 32점, 서울시 지정문화재 4점 등 교과서에 등장하는 상당수의 문화재를 보유하고 있습니다. 그 중 한글의 창제원리가 학술적으로 규명되어 한글의 과학성과 독창성을 입증하여 유네스코 세계기록문화유산에  등재된 훈민정음 해례본도 소장하고 있습니다 . 그 외에도 청자운학문매병(국보 제68호),신윤복의 미인도, 겸재 정선의 해악전신첩 등 국내 어떤 박물관도 따라갈 수 없는 높은 수준의 문화재를 보유하고 있습니다.
             </p>
           </div>
 
@@ -540,9 +537,9 @@
                   <img src="./img/logo-kansong-bk.png" alt="" />
                 </div>
                 <div class="Team-dec">
-                  <p>Holder of Original Paintings</p>
-                  <p>Digitalization</p>
-                  <p>Strategic Partnering</p>
+                  <p>원화 보유자</p>
+                  <p>디지털화</p>
+                  <p>전략적 제휴</p>
                 </div>
               </li>
 
@@ -551,9 +548,9 @@
                   <img src="./img/logo-AtomrigsLab.png" alt="" />
                 </div>
                 <div class="Team-dec">
-                  <p>Project Management</p>
-                  <p>Blockchain Development</p>
-                  <p>Marketing and Community Building</p>
+                  <p>프로젝트 관리</p>
+                  <p>블록체인 개발</p>
+                  <p>마케팅 및 커뮤니티 구축</p>
                 </div>
               </li>
 
@@ -562,9 +559,9 @@
                   <img src="./img/logo-BYM.png" alt="" />
                 </div>
                 <div class="Team-dec">
-                  <p>Creator Management</p>
-                  <p>Digital Contents Management</p>
-                  <p>Marketing</p>
+                  <p>크리에이터 관리</p>
+                  <p>디지털 콘텐츠 관리</p>
+                  <p>마케팅</p>
                 </div>
               </li>
 
@@ -573,9 +570,9 @@
                   <img src="./img/logo-ejelaw2.png" alt="" />
                 </div>
                 <div class="Team-dec">
-                  <p>Regulatory Compliance</p>
-                  <p>Legal Affairs</p>
-                  <p>Strategic Partnering</p>
+                  <p>규제 준수</p>
+                  <p>법무</p>
+                  <p>전략적 제휴</p>
                 </div>
               </li>
             </ul>
@@ -588,7 +585,8 @@
       <div class="Container">
         <div class="grid">
           <div class="textarea col-12 m-col-6">
-            <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">Partner</h2>
+            <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">파트너
+            </h2>
           </div>
 
           <div class="imgarea m-col-6">
@@ -655,7 +653,7 @@
       <div class="nft_termsofsale">
         <a href="NFT_terms_of_sale_6.3.pdf" target="_blank">
           <img src="./img/icon-link.svg" alt="">
-          NFT Terms of Sale
+          NFT 판매 약관
         </a>
       </div>
     </section>
